--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,6 +24,9 @@ endif()
 if(BUILD_SANDBOX)
 	add_subdirectory(sandbox)
 endif()
+if (BUILD_NEEDLE_STEERING)
+  add_subdirectory(needle_steering)
+endif()
 add_subdirectory(osgviewer)
 if(BUILD_HUMANOIDS)
   add_subdirectory(humanoids)
