--- a/src/trajopt/CMakeLists.txt
+++ b/src/trajopt/CMakeLists.txt
@@ -29,6 +29,5 @@ add_subdirectory(test)
 
 include_directories(${PYTHON_NUMPY_INCLUDE_DIR})
 boost_python_module(ctrajoptpy trajoptpy.cpp)
-target_link_libraries(ctrajoptpy trajopt ${Boost_SYSTEM_LIBRARY} )
-
+target_link_libraries(ctrajoptpy trajopt ${Boost_SYSTEM_LIBRARY} ${OpenRAVE_BOTH_LIBRARIES})
 
