building up the framework (incomplete)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ set(HACD_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/ext/HACD_Lib/inc ${CMAKE_SOURCE_DIR}/e
 
 enable_testing()
 
+option(BUILD_BSP "build belief space planning experiments" ON)
 option(BUILD_CLOUDPROC "build point cloud processing stuff" OFF)
 option(BUILD_SANDBOX "build sandbox programs" OFF)
 option(BUILD_HUMANOIDS "build humanoids stuff" OFF)
