--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,9 @@ set(OpenRAVE_BOTH_LIBRARIES ${OpenRAVE_LIBRARIES} ${OpenRAVE_CORE_LIBRARIES})
 add_subdirectory(sco)
 add_subdirectory(trajopt)
 add_subdirectory(utils)
+if(BUILD_BSP)
+  add_subdirectory(bsp)
+endif()
 if(BUILD_CLOUDPROC) 
 	add_subdirectory(cloudproc)
 endif()
