--- a/src/bsp/CMakeLists.txt
+++ b/src/bsp/CMakeLists.txt
@@ -18,5 +18,5 @@ include_directories(
 
 SET(toy_qt_HEADERS toy_optimizer_task.hpp toy_plotter.hpp)
 QT4_WRAP_CPP(toy_qt_HEADERS_MOC ${toy_qt_HEADERS})
-add_executable(toy toy_main.cpp toy.cpp costs.cpp optimizers.cpp utils.cpp gnuplot_i.cc toy_optimizer_task.cpp toy_plotter.cpp ${toy_qt_HEADERS_MOC})
+add_executable(toy toy_main.cpp toy.cpp costs.cpp optimizers.cpp utils.cpp toy_optimizer_task.cpp toy_plotter.cpp ${toy_qt_HEADERS_MOC})
 target_link_libraries(toy trajopt ${QT_LIBRARIES} ${QWT_LIBRARY})
