--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,7 @@ add_subdirectory(trajopt)
 add_subdirectory(utils)
 if(BUILD_BSP)
   add_subdirectory(bsp)
+  add_subdirectory(bsp_sandbox)
 endif()
 if(BUILD_CLOUDPROC) 
 	add_subdirectory(cloudproc)
