--- a/src/bsp_sandbox/CMakeLists.txt
+++ b/src/bsp_sandbox/CMakeLists.txt
@@ -16,3 +16,8 @@ SET(toy_qt_headers toy.hpp)
 QT4_WRAP_CPP(toy_qt_headers_moc ${toy_qt_headers})
 add_executable(toy toy.cpp ${toy_qt_headers_moc})
 target_link_libraries(toy bsp trajopt ${QT_LIBRARIES})
+
+SET(car_qt_headers car.hpp)
+QT4_WRAP_CPP(car_qt_headers_moc ${car_qt_headers})
+add_executable(car car.cpp ${car_qt_headers_moc})
+target_link_libraries(car bsp trajopt ${QT_LIBRARIES})
