use own sampling gaussian code

--- a/src/bsp_sandbox/CMakeLists.txt
+++ b/src/bsp_sandbox/CMakeLists.txt
@@ -1,7 +1,4 @@
 find_package(Qt4 REQUIRED)
-find_package(Armadillo REQUIRED)
-find_package(LibXml2 REQUIRED)
-find_package(mlpack REQUIRED)
 
 include(${QT_USE_FILE})
 ADD_DEFINITIONS(${QT_DEFINITIONS})
@@ -13,19 +10,17 @@ include_directories(
   ${Eigen_INCLUDE_DIRS}
   ${OpenRAVE_INCLUDE_DIRS}
   ${JSON_INCLUDE_DIRS}
-  ${LIBXML2_INCLUDE_DIR}
-  ${MLPACK_INCLUDE_DIRS}
 )
 
 SET(toy_qt_headers toy.hpp)
 QT4_WRAP_CPP(toy_qt_headers_moc ${toy_qt_headers})
 add_executable(toy toy.cpp ${toy_qt_headers_moc})
-target_link_libraries(toy bsp trajopt ${QT_LIBRARIES} ${LIBXML2_LIBRARIES} ${MLPACK_LIBRARIES})
+target_link_libraries(toy bsp trajopt ${QT_LIBRARIES})
 
 SET(arm_qt_headers arm.hpp)
 QT4_WRAP_CPP(arm_qt_headers_moc ${arm_qt_headers})
 add_executable(arm arm.cpp geometry_2d.cpp ${arm_qt_headers_moc})
-target_link_libraries(arm bsp trajopt ${QT_LIBRARIES} ${LIBXML2_LIBRARIES} ${MLPACK_LIBRARIES} ${Boost_LIBRARIES})
+target_link_libraries(arm bsp trajopt ${QT_LIBRARIES} ${Boost_LIBRARIES})
 
 add_executable(geometry_2d_test geometry_2d_test.cpp geometry_2d.cpp)
 target_link_libraries(geometry_2d_test bsp trajopt)
