--- a/src/bsp_sandbox/CMakeLists.txt
+++ b/src/bsp_sandbox/CMakeLists.txt
@@ -14,7 +14,7 @@ include_directories(
 
 SET(toy_qt_headers toy.hpp)
 QT4_WRAP_CPP(toy_qt_headers_moc ${toy_qt_headers})
-add_executable(toy toy.cpp ${toy_qt_headers_moc})
+add_executable(toy toy.cpp geometry_2d.cpp ${toy_qt_headers_moc})
 target_link_libraries(toy bsp trajopt ${QT_LIBRARIES})
 
 SET(arm_qt_headers arm.hpp)
@@ -34,3 +34,8 @@ SET(needle_qt_headers needle.hpp)
 QT4_WRAP_CPP(needle_qt_headers_moc ${needle_qt_headers})
 add_executable(needle needle.cpp geometry_2d.cpp ${needle_qt_headers_moc})
 target_link_libraries(needle bsp trajopt ${QT_LIBRARIES})
+
+SET(car_static_qt_headers car_static.hpp)
+QT4_WRAP_CPP(car_static_qt_headers_moc ${car_static_qt_headers})
+add_executable(car_static car_static.cpp geometry_2d.cpp ${car_static_qt_headers_moc})
+target_link_libraries(car_static bsp trajopt ${QT_LIBRARIES})
