--- a/src/bsp_sandbox/CMakeLists.txt
+++ b/src/bsp_sandbox/CMakeLists.txt
@@ -2,7 +2,7 @@ find_package(Qt4 REQUIRED)
 
 include(${QT_USE_FILE})
 add_definitions(${QT_DEFINITIONS})
-add_definitions(-DDATA_DIR="/home/rocky/trajopt-alex/data")#${CMAKE_SOURCE_DIR}/data")
+add_definitions(-DDATA_DIR="${CMAKE_SOURCE_DIR}/data")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
 include_directories(
@@ -42,5 +42,5 @@ QT4_WRAP_CPP(needle_qt_headers_moc ${needle_qt_headers})
 add_executable(needle needle.cpp geometry_2d.cpp ${needle_qt_headers_moc})
 target_link_libraries(needle bsp trajopt ${QT_LIBRARIES})
 
-add_executable(robot robot.cpp)
-target_link_libraries(robot bsp trajopt)
+add_executable(barrett_robot barrett_robot.cpp)#../trajopt/kinematic_terms.cpp ../trajopt/problem_description.cpp)
+target_link_libraries(barrett_robot trajopt bsp sco)
