--- a/src/bsp_sandbox/CMakeLists.txt
+++ b/src/bsp_sandbox/CMakeLists.txt
@@ -47,3 +47,6 @@ target_link_libraries(barrett_robot bsp trajopt)
 
 add_executable(three_links_robot three_links_robot.cpp)
 target_link_libraries(three_links_robot bsp trajopt)
+
+add_executable(point_robot point_robot.cpp)
+target_link_libraries(point_robot bsp trajopt)
