--- a/src/bsp_sandbox/CMakeLists.txt
+++ b/src/bsp_sandbox/CMakeLists.txt
@@ -48,5 +48,8 @@ target_link_libraries(barrett_robot bsp trajopt)
 add_executable(three_links_robot three_links_robot.cpp)
 target_link_libraries(three_links_robot bsp trajopt)
 
+add_executable(four_links_robot four_links_robot.cpp)
+target_link_libraries(four_links_robot bsp trajopt)
+
 add_executable(point_robot point_robot.cpp)
 target_link_libraries(point_robot bsp trajopt)
