--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,7 @@ add_subdirectory(trajopt)
 add_subdirectory(utils)
 if(BUILD_BSP)
   add_subdirectory(bsp)
+  add_subdirectory(bsp_qt)
   add_subdirectory(bsp_sandbox)
 endif()
 if(BUILD_CLOUDPROC) 
