--- a/src/bsp_sandbox/CMakeLists.txt
+++ b/src/bsp_sandbox/CMakeLists.txt
@@ -54,9 +54,9 @@ target_link_libraries(barrett_robot bsp trajopt)
 add_executable(raven raven.cpp)
 target_link_libraries(raven bsp trajopt)
 
-#add_library(ravenbsp raven.cpp)
-#target_link_libraries(ravenbsp bsp trajopt)
+add_library(ravenbsp raven.cpp)
+target_link_libraries(ravenbsp bsp trajopt)
 
-#include_directories(${PYTHON_NUMPY_INCLUDE_DIR})
-#boost_python_module(cravenbsppy ravenpy.cpp)
-#target_link_libraries(cravenbsppy ravenbsp bsp trajopt ${Boost_SYSTEM_LIBRARY} ${OpenRAVE_BOTH_LIBRARIES})
+include_directories(${PYTHON_NUMPY_INCLUDE_DIR})
+boost_python_module(cravenbsppy ravenpy.cpp)
+target_link_libraries(cravenbsppy ravenbsp bsp trajopt ${Boost_SYSTEM_LIBRARY} ${OpenRAVE_BOTH_LIBRARIES})
