--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,6 +41,9 @@ endif()
 if (BUILD_NEEDLE_STEERING)
   add_subdirectory(needle_steering)
 endif()
+if (BUILD_NEEDLE_STEERING_RRT)
+  add_subdirectory(needle_steering_rrt)
+endif()
 add_subdirectory(osgviewer)
 if(BUILD_HUMANOIDS)
   add_subdirectory(humanoids)
